# greeniem

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  fly.toml  greeniem.code-workspace  index.html  index.scss
nginx/: docker-entrypoint.sh  nginx.conf
src/: api.rs  app.rs  format.rs  main.rs  route.rs  types.rs
src/components/: alert.rs  captcha_gate.rs  footer.rs  mod.rs  navbar.rs  product_card.rs
src/pages/: cart.rs  checkout.rs  home.rs  mod.rs  order_success.rs  product_detail.rs  products.rs
src/pages/admin/: layout.rs  login.rs  mod.rs  orders.rs  products.rs  settings.rs
src/state/: auth.rs  captcha.rs  cart.rs  mod.rs
